@@ -37,7 +37,7 @@
 #include <linux/spinlock.h>
 
 #include "linux/osmcompat32.h"
-#include "linux/osmkernel.h"
+#include "linux/asmkernel.h"
 #include "linux/osmabi.h"
 #include "linux/osmdisk.h"
 #include "asmerror.h"
